exports[`BpkRadio should render correctly 1`] = `
<label
  className="bpk-radio">
  <input
    checked={false}
    className="bpk-radio__input"
    disabled={false}
    id={null}
    name="radio"
    onChange={[Function onChange]}
    type="radio"
    value="radio" />
</label>
`;

exports[`BpkRadio should render correctly with checked attribute 1`] = `
<label
  className="bpk-radio">
  <input
    checked={true}
    className="bpk-radio__input"
    disabled={false}
    id={null}
    name="radio"
    onChange={[Function onChange]}
    type="radio"
    value="radio" />
</label>
`;

exports[`BpkRadio should render correctly with disabled attribute 1`] = `
<label
  className="bpk-radio bpk-radio--disabled">
  <input
    checked={false}
    className="bpk-radio__input"
    disabled={true}
    id={null}
    name="radio"
    onChange={[Function onChange]}
    type="radio"
    value="radio" />
</label>
`;

exports[`BpkRadio should render correctly with id attribute 1`] = `
<label
  className="bpk-radio">
  <input
    checked={false}
    className="bpk-radio__input"
    disabled={false}
    id="radio"
    name="radio"
    onChange={[Function onChange]}
    type="radio"
    value="radio" />
</label>
`;

exports[`BpkRadio should render correctly with label attribute 1`] = `
<label
  className="bpk-radio">
  <input
    checked={false}
    className="bpk-radio__input"
    disabled={false}
    id={null}
    name="radio"
    onChange={[Function onChange]}
    type="radio"
    value="radio" />
   My label
</label>
`;

exports[`BpkRadio should render correctly with value attribute 1`] = `
<label
  className="bpk-radio">
  <input
    checked={false}
    className="bpk-radio__input"
    disabled={false}
    id={null}
    name="radio"
    onChange={[Function onChange]}
    type="radio"
    value="my-value" />
</label>
`;
